# inverse_dielectric

./: .gitignore  CMakeLists.txt  README.md  conf.gnu.used  conf.gpu.used  conf.used
benchmark/: CMakeLists.txt  procedures_2d.f90  procedures_3d.f90
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  documentation.cmake  fftw3.cmake  linalg.cmake  mkl.cmake  openmp.cmake  spglib.cmake
doc/: Doxyfile.in
interfaces/: CMakeLists.txt  interface.cpp  interface.f90
python/: CMakeLists.txt  interface.f90
src/: CMakeLists.txt
src/constants/: CMakeLists.txt  constants.f90
src/crystal/: CMakeLists.txt  crystal_cell.f90  crystal_symmetry.f90
src/dielectric/: CMakeLists.txt  angular_average.f90  inverse_dielectric.f90
src/gpu/: .gpu_register.cpp.swp  CMakeLists.txt  gpu_register.cpp  gpu_register.f90  gpu_unified_vendors_interface.f90  gpu_world_t_cpu.f90  gpu_world_t_gpu.f90
src/idiel/: CMakeLists.txt  idiel.f90
src/idiel/definitions/: .idiel_3d.f90.swp  idiel_2d.f90  idiel_3d.f90  idiel_common.f90
src/interpolation/: CMakeLists.txt  cubic_spline_1d.f90  interpolation.f90
src/linear_algebra/: CMakeLists.txt  cpu_magma_t.f90  gpu_magma_t.f90  linalg.f90
src/quadrature/: CMakeLists.txt  circle_quadrature.f90  gauss_legendre_quadrature.cpp  sph_quadrature.f90
src/special_functions/: CMakeLists.txt  circular_harmonics.f90  spherical_harmonics.f90
src/spherical_harmonics/: CMakeLists.txt  spherical_harmonics.f90
test/: CMakeLists.txt  test_2d.f90  test_circular_expansion.f90  test_crystal.f90  test_dielectric_average_iso.f90  test_inverse.f90  test_python_bindings.py  test_quadrature_lebedev.f90  test_sph_harm.f90  test_spline.f90
test_resources/crystal/: gen_ref_crystal.py
test_resources/spherical_harmonics/: ang21.txt  imag_part.txt  real_part.txt  ylm.py
